@@ -7,5 +7,6 @@ source "i386/modules/Resolution/Cconfig"
 source "i386/modules/klibc/Cconfig"
 source "i386/modules/uClibcxx/Cconfig"
 source "i386/modules/HelloWorld/Cconfig"
+source "i386/modules/Sata/Cconfig"
 source "i386/modules/Keylayout/Cconfig"
 endmenu
